--- a/html/stories/1912-Florina.html
+++ b/html/stories/1912-Florina.html
@@ -2,11 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="../../css/style.css">
     <title>Η απελευθέρωση της Φλώρινας</title>
   </head>
   <body>
     <h2>Η απελευθέρωση της Φλώρινας</h2>
     <h4>07-11-1912</h4>
+    <hr>
     <p>
       Οι Σέρβοι στις 6 Νοεμβρίου κατέλαβαν το Μοναστήρι και προελάμβαναν προς Νότο.
       Ο σέρβικος στρατός απείχε μόλις 5 ώρες από την Φλώρινα, ενώ ο ελληνικός 6.
@@ -32,5 +34,6 @@
       ο οποίος ιπποτικά παρέσχε σ'αυτή το δικαίωμα φιλοξενίας.
       Μετά από 5 αιώνες η Φλώρινα ήταν ξανά ελληνική.
     </p>
+    <img src="images/Crane1886.jpg" alt="Scary Little Rumpel!" class="head-image">
   </body>
 </html>
