Fixed empty img folder

--- a/html/stories/1912-Florina.html
+++ b/html/stories/1912-Florina.html
@@ -10,8 +10,8 @@
     <h4>07-11-1912</h4>
     <hr>
     <p>
-      Οι Σέρβοι στις 6 Νοεμβρίου κατέλαβαν το Μοναστήρι και προελάμβαναν προς Νότο.
-      Ο σέρβικος στρατός απείχε μόλις 5 ώρες από την Φλώρινα, ενώ ο ελληνικός 6.
+      Οι Σέρβοι στις 6 Νοεμβρίου κατέλαβαν το Μοναστήρι και κατευθήνθηκαν προς τον νότο.
+      Ο σέρβικος στρατός απείχε μόλις 5 ώρες από την Φλώρινα, ενώ ο ελληνικός 6 ώρες.
       Αν δεν προλάβαινε ο ελληνικός στρατός θα έχανε και την Φλώρινα,
       όπως έχασε και το Μοναστήρι.
       Οι Έλληνες όμως στάθηκαν τυχεροί,
@@ -34,6 +34,6 @@
       ο οποίος ιπποτικά παρέσχε σ'αυτή το δικαίωμα φιλοξενίας.
       Μετά από 5 αιώνες η Φλώρινα ήταν ξανά ελληνική.
     </p>
-    <img src="images/Crane1886.jpg" alt="Scary Little Rumpel!" class="head-image">
+    <img src="../..img/" alt="Σακουλέβας" class="bot-image">
   </body>
 </html>
