--- a/src/1912-Απελευθέρωση Φλώρινας.html
+++ b/src/1912-Απελευθέρωση Φλώρινας.html
@@ -34,6 +34,9 @@
       ο οποίος ιπποτικά παρέσχε σ'αυτή το δικαίωμα φιλοξενίας.
       Μετά από 5 αιώνες η Φλώρινα ήταν ξανά ελληνική.
     </p>
-    <img src="../..img/" alt="Σακουλέβας" class="bot-image">
+    <figure>
+      <img src="../img/1912-Απελευθέρωση Φλώρινας2.jpeg" alt="Σακουλέβας" class="bot-image">
+      <figcaption class="text-mid"><i>Γυναίκες πλένουν στον ποταμό Σακουλέβα της Φλώρινας (1917)</i></figcaption>
+    </figure>
   </body>
 </html>
