--- a/src/1912-Απελευθέρωση Φλώρινας.html
+++ b/src/1912-Απελευθέρωση Φλώρινας.html
@@ -35,7 +35,7 @@
       Μετά από 5 αιώνες η Φλώρινα ήταν ξανά ελληνική.
     </p>
     <figure>
-      <img src="../img/1912-Απελευθέρωση Φλώρινας2.jpeg" alt="Σακουλέβας" class="bot-image">
+      <img src="../img/1912-Απελευθέρωση Φλώρινας.jpeg" alt="Σακουλέβας" class="bot-image">
       <figcaption class="text-mid"><i>Γυναίκες πλένουν στον ποταμό Σακουλέβα της Φλώρινας (1917)</i></figcaption>
     </figure>
   </body>
